[tool.poetry]
name = "chomp_dance"
version = "0.1.0"
description = ""
authors = ["Scott Hain <elejia@gmail.com>"]
readme = "README.md"
packages = [{include = "chomp_dance"}]

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"